--- a/Exercises/bulb/index.html
+++ b/Exercises/bulb/index.html
@@ -20,13 +20,16 @@
 
     <div class="container">
         <div class="d-flex justify-content-center align-items-center">
-            <div>
+            <div class="col-lg-6">
                 <!-- <h1 ></h1> -->
                 <i class="bi bi-lightbulb bulb"></i>
+            </div>
+            <div class="col-lg-6">
+                    <h2></h2>
             </div>
         </div>
     </div>
 
-    <script src="bulb.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
